Renommage des fichiers d'activitÃ©

--- a/app/src/main/res/layout/activity_recherche_par_departement.xml
+++ b/app/src/main/res/layout/activity_recherche_par_departement.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".RechercheParDepartementActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:hint="@string/nom_de_l_entreprise"
             android:inputType="text"
