--- a/app/src/main/res/layout/activity_recherche_par_departement.xml
+++ b/app/src/main/res/layout/activity_recherche_par_departement.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +8,12 @@
     tools:context=".RechercheParDepartementActivity">
 
     <TextView
+        android:id="@+id/nomPageRechercherEntreprisePostalDepartement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="@string/rechercher_une_entreprise"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,18 +21,63 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/editTextTextPersonName3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:ems="10"
             android:hint="@string/nom_de_l_entreprise"
-            android:inputType="text"
-            android:autofillHints="@string/nom_de_l_entreprise" />
+            android:inputType="textPersonName"
+            tools:ignore="Autofill" />
 
         <ImageButton
+            android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:contentDescription="@string/rechercher"
-            android:src="@android:drawable/ic_menu_search"/>
+            android:src="@android:drawable/ic_menu_search" />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:gravity="end"
+        android:text="@string/afficher_les_options_suppl_mentaires" />
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayoutOptionsSupplementaires"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/code_postal" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/code_postal"
+            android:inputType="numberDecimal"
+            android:visibility="gone"
+            tools:ignore="Autofill" />
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/d_partement" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/d_partement"
+            android:inputType="numberDecimal"
+            android:visibility="gone"
+            tools:ignore="Autofill" />
+
+    </LinearLayout>
+</TableLayout>
