--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayoutLauncher"
     android:layout_width="match_parent"
@@ -7,23 +7,29 @@
     android:orientation="vertical"
     tools:context=".LauncherActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/bienvenue_sur_rien" />
-
-    <ImageView
-        android:layout_width="238dp"
-        android:layout_height="238dp"
-        android:layout_gravity="center"
-        android:contentDescription="@string/logo_de_l_application"
-        android:src="@drawable/ic_rien" />
-
-    <ProgressBar
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
+        <ImageView
+            android:id="@+id/LauncherActivityImageView"
+            android:layout_width="238dp"
+            android:layout_height="238dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
+            android:contentDescription="@string/logo_de_l_application"
+            android:src="@drawable/ic_rien" />
 
-</LinearLayout>
+        <ProgressBar
+            android:id="@+id/LauncherActivityProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:foregroundTint="@color/cobalt_blue" />
+    </LinearLayout>
+
+</TableLayout>
