--- a/app/src/main/res/layout/activity_recherche_par_activite.xml
+++ b/app/src/main/res/layout/activity_recherche_par_activite.xml
@@ -30,7 +30,7 @@
             tools:ignore="Autofill" />
 
         <ImageButton
-            android:id="@+id/button"
+            android:id="@+id/buttonRechercheParActiviteButtonSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -79,12 +79,23 @@
             android:id="@+id/RechercheParActiviteActivityEditTextCodeNAF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:digits="0123456789ABab"
+            android:digits="0123456789ABCDEFZ"
             android:hint="@string/code_naf"
             android:inputType="textCapCharacters"
             android:maxLength="3"
             android:visibility="gone"
             tools:ignore="Autofill" />
     </RadioGroup>
+
+    <ProgressBar
+        android:id="@+id/progressBarRechercheParActiviteActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
+    <ListView
+        android:id="@+id/listResultRechercheParActiviteActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </TableLayout>
