--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -39,16 +39,36 @@
 
     </androidx.cardview.widget.CardView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/infoFloatButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:src="@drawable/ic_info"
-        android:contentDescription="@string/information"
+        android:gravity="center">
 
-        android:layout_marginTop="100dp"
-        android:layout_margin="5dp" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/historyFloatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:src="@drawable/ic_history"
+            android:contentDescription="@string/information"
+
+            android:layout_marginTop="100dp"
+            android:layout_margin="5dp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/infoFloatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:src="@drawable/ic_info"
+            android:contentDescription="@string/information"
+
+            android:layout_marginTop="100dp"
+            android:layout_margin="5dp" />
+
+    </LinearLayout>
+
+
 
 
 </LinearLayout>
